# jumpstarter-mono

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  404.html  CHECKLIST.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md  Makefile  README.md  _typos.toml  fix_imports.py  go.work  go.work.sum  index.html  mkdocs.yml  pyproject.toml  renovate.json
.github/: COPILOT_INSTRUCTIONS.md  cleanup-runs.sh
.github/containers/: Containerfile.ci-base  Containerfile.ci-go  Containerfile.ci-multi  Containerfile.ci-node  Containerfile.ci-python  Containerfile.ci-rust  README.md
.github/workflows/: ci-containers.yml  ci.yml  manual-release.yml  performance.yml  publish.yml  release.yml  reusable-go-build.yml  reusable-go-lint.yml  reusable-python-lint.yml  reusable-python-test.yml  reusable-release.yml  reusable-rust-build.yml  reusable-typos.yml  reusable-web-build.yml
architecture/: index.html
core/controller/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  buf.gen.yaml  go.mod  go.sum
development/: index.html
docs/: index.md  mkdocs.yml
hardware/: index.html
installation/: index.html
integrations/: index.html
lab-config/: .cursorrules  .dockerignore  .gitignore  .golangci.back.yml  .golangci.yml  Containerfile  Makefile  PROJECT  README.md  create-kubeconfig.sh  go.mod  go.sum  install.sh
scripts/: README.md  cleanup-orphaned-releases.sh  fix-package-versions.sh  migrate-components.sh  setup-monorepo-structure.sh  test-act-masking.sh  validate-ci-with-act.sh  validate-ci.sh  validate-redhat-containers.sh
search/: search_index.json
templates/driver/: Dockerfile  README.md  pyproject.toml
templates/driver/src/jumpstarter_driver_template/: client.py  driver.py  driver_test.py
user-guide/: index.html
(+261 files in other folders)
