[project]
name = "jumpstarter-driver-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jumpstarter-driver-template" },
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.6.2.post1",
    "jumpstarter",
]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
jumpstarter = { workspace = true }

[tool.pytest.ini_options]
addopts = "--cov --cov-report=html --cov-report=xml"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
